v0.0.3 ():
- Добавлено приложение "Скрипты".
- Добавлена функция создания бэкапа базы данных и отправки дампа на электронную почту.

v0.0.2 (03.07.2021)
- Обновление Django до версии 3.2.
- Для подключения к PostgreSQL базе данных указаны конкретный IP-адрес и порт.
- Тип стандартного авто-поля для первичного ключа в проекте изменен на BigAutoField.
- В приложении "Блог" AutoField установлен как стандартный тип авто-поля для первичного ключа. 
- Добавлена ссылка для администраторов на панель администрирования в шапке сайта.
- Локализовано название приложения "Блог" в панели администрирования.
- Заполнение имени и фамилии стало обязательным при регистрации пользователя.
- При регистрации пользователя имя и фамилия не должны совпадать.

v0.0.1 (22.02.2021)
Первоначальный релиз.