@@ -4,3 +4,4 @@ secrets.json
 mikhailpolyakov.crt
 mikhailpolyakov.key
 root/staticfiles/node_modules/
+*.log
