@@ -1,0 +1,18 @@
+# Generated by Django 3.1.5 on 2021-07-04 17:18
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('scripts', '0004_alter_run_status'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='run',
+            name='end',
+            field=models.DateTimeField(blank=True, null=True, verbose_name='Время завершения'),
+        ),
+    ]
