@@ -1,0 +1,18 @@
+# Generated by Django 3.2.5 on 2021-07-04 17:26
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('scripts', '0005_auto_20210704_2018'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='run',
+            name='success',
+            field=models.BooleanField(blank=True, null=True, verbose_name='Успешный'),
+        ),
+    ]
