@@ -1,6 +1,11 @@
 v0.0.3 ():
 - Добавлено приложение "Скрипты".
 - Добавлена функция создания бэкапа базы данных и отправки дампа на электронную почту.
+- Добавлены модели "Скрипт" и "Запуск".
+- В административной панели добавлена возможность запуска скриптов и просмотра результатов.
+- Добавлена зависимость: loguru.
+- В .gitignore добавлено исключение файлов .log.
+- Лог скрипта сохраняется в лог-файл.
 
 v0.0.2 (03.07.2021)
 - Обновление Django до версии 3.2.
